kubernetes/apps/media/base/jellyseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      dnsPolicy: ClusterFirst
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: jellyseerr
          image: seerr/seerr:v3.5.0@sha256:27602401178d54f1964442287b9f23f67a3fa2252645ee8065839ea1c3f69e45
          ports:
            - containerPort: 5055
              name: http
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: config
              mountPath: /app/config

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyseerr-pvc
